--- a/_posts/1017-12-12-decreto.html
+++ b/_posts/1017-12-12-decreto.html
@@ -1,13 +1,13 @@
 ---
-title: Decreto XLVII
+title: Decreto 
 layout: default
 author: Luvas
 ---
 
 <article class="ph6-l ph5-m ph3 black-70">
   <header class="mw7 center">
-    <p class="f5-m f6 ttu tracked">Decreto XLVII</p>
-    <time class="f6 dib mt2 tracked">14/10/2016</time>
+    <p class="f5-m f6 ttu tracked">Decreto Teste</p>
+    <time class="f6 dib mt2 tracked">66/66/2017</time>
   </header>
   <p class="i f3-m f5">
     Vocês estão ouvindo?
@@ -15,10 +15,10 @@ author: Luvas
   <p class="f2-m f3 lh-copy mw7 center">
     São os ventos de um novo fim de semana chegando.
   </p>
-  <p class="f3-m f5 mw7 lh-copy center i bl bw2 pl4 black-70">
+  <p class="i bl bw2 pl4 black-70">
     É a hoste dos deuses do decreto retumbando suas botas da alegria e da felicidade, anunciando a inevitável permissão para PERDER AS ESTRIBEIRAS E LITERALMENTE COLOCAR A CARROÇA NA FRENTE DOS BOIS!
   </p>
-  <p class="f3-m f5 mw7 lh-copy center">
+  <p>
     Por força do decreto nº XLVII , a partir de hoje pode:<br>Comer partes de animais incomuns, como rabo de porco, recitar o respectivo DECRETO no almoço de família no domingo, constrangendo aquele seu(s) parente(s) conservador(es) que sei que todo mundo tem, pega o busão errado e parar em hortolândia ou em guaianases ou grajaú (pros moradores de SP) e vender as próprias vestimentas pra conseguir sair dali, promover open bar no meio da avenida, comprar fogos de artifícios e solta-los num ambiente fechado, alugar outdoor pra exibir a foto constrangedora do seu amigo ou amiga, chegar em casa domingo com o cabelo descolorido, com outra roupa, descalço, alegando ter sido abduzido, invadir festa formal de gente velha, chata e cabeça-fechada e causar o verdadeiro caos, mostrando a bunda pros coroa além de obviamente comer e beber de graça, violar domicílio, fumar charuto bêbada(o), jogar vôlei com uma granada como bola, ir parar nas FÍMBRIAS do desconhecido, ficar bêbado à beça e no domingo a tarde ter vagos flashes sobre as peripécias praticadas no dia anterior, brigar com taxista, achar dinheiro no bolso, imprimir centenas de páginas de documentos pessoais na impressora do trabalho, subir em telhados, colocar enxame de abelhas no carro do desafeto, viver como se vivia nas invasões vikings no ano de 878, isto é, fodendo a porra toda, nadar nu no rio, comer comida crua, jogar pedaço de cocô em chamas em direção ao desafeto e curtir a vida numa boa.
   </p>
 </article>
